<resources>
    <string name="app_name">K2DBinarySearch</string>
    <string name="first_text">This is a simple app for demonstration how binary search works. Please imagine a number from zero to one million and this app try to ques it for 20 attempts or less.</string>
    <string name="randomNumber_text">Or you can generate a random number and test the app on it</string>
    <string name="first_button">Lets play</string>
    <string name="generateRandomNumberBTNText">Generate random</string>
    <string name="less">It less</string>
    <string name="it_is">It is</string>
    <string name="big">It bigger</string>
    <string name="new_game">New game</string>
    <string name="clear_history">Clear history</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="is_it_that_number">Is it</string>
    <string name="ok_attempt">OK. Attempt</string>
    <string name="be_better">failed. I will be better next time.</string>
    <string name="o_no_it_is_attempt">O no! It is attempt</string>
    <string name="broke_something">! You broke something! You are bad!</string>
    <string name="i_knew_it_was">I knew it was</string>
    <string name="soft_human">! You soft human! Ha! Only</string>
    <string name="tries_ha_ha">tries! Ha! Ha! Ha!</string>
    <string name="full_clear">Full clear</string>
    <string name="approve_to_clear">Do you approve to full clear of all history?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="cannot_be_null">Activity cannot be null</string>
    <string name="date">Date</string>
    <string name="number">Number</string>
    <string name="todo">TODO</string>
    <string name="achieve">achieve</string>
    <string name="history">history</string>
    <string name="to_test_area">To test area</string>
    <string name="to_old_bs">To old BS</string>
    <string name="other">OTHER</string>
    <string name="binary_search">Binary search</string>
    <string name="full_history">Full history</string>
    <string name="about_authors">About authors</string>
    <string name="demo_animation">New game icon. Decoration element for demonstration animation</string>
    <string name="about_us_text">Hello i am new developer</string>
    <string name="it_is_empty">There was a number. Something broke?</string>
    <string name="app_guesses">App guesses</string>
    <string name="you_guess">You guess</string>

</resources>