<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.GameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/nightDark"
        android:divider="@drawable/separator"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:showDividers="middle"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/gameFragmentTopText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/comfortaa_light"
            android:paddingHorizontal="3dp"
            android:textColor="@color/white"
            app:autoSizePresetSizes="@array/auto_size_text_sizes"
            app:autoSizeTextType="uniform"
            tools:text="@string/it_is_empty" />

        <Button
            android:id="@+id/buttonItLess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons_rounded_corners"
            android:fontFamily="@font/comfortaa_light"
            android:paddingTop="5dp"
            android:text="@string/less"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameFragmentTopText" />

        <Button
            android:id="@+id/buttonItBigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons_rounded_corners"
            android:fontFamily="@font/comfortaa_light"
            android:paddingTop="5dp"
            android:text="@string/big"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonItIs" />

        <Button
            android:id="@+id/buttonItIs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons_rounded_corners"
            android:fontFamily="@font/comfortaa_light"
            android:paddingTop="5dp"
            android:text="@string/it_is"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonItLess" />

        <Button
            android:id="@+id/buttonNewGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons_rounded_corners"
            android:fontFamily="@font/comfortaa_light"
            android:paddingTop="5dp"
            android:text="@string/new_game"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonItBigger" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="4dp">

            <TextView
                android:id="@+id/recyclerDateColumn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date" />

            <TextView
                android:id="@+id/recyclerNumberColumn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewGameFragment"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerNumberColumn" />

            <ImageView
                android:id="@+id/historyOverlayImageShadowEffect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/shadow_effect"
                android:clickable="true"
                android:contentDescription="@string/recycler_shadow_effect"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewGameFragment" />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>