<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nightDark"
    tools:context=".fragments.HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="4dp">

            <TextView
                android:id="@+id/recyclerDateColumn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date" />

            <TextView
                android:id="@+id/recyclerNumberColumn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyFragmentRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="8dp" />

        <Button
            android:id="@+id/buttonClearHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/buttons_rounded_corners"
            android:fontFamily="@font/comfortaa_light"
            android:paddingTop="5dp"
            android:text="@string/clear_history"
            android:textAllCaps="false"
            android:textSize="15sp" />
    </LinearLayout>

</FrameLayout>